<resources>
    <string name="app_name">MoneyLens</string>
    <string name="money_detector">Pendeteksi Uang untuk Tunanetra</string>
    <string name="camera_feed">Live feed dari kamera</string>
    <string name="flash">Flash</string>
    <string name="toggle_flash">Nyalakan atau matikan lampu flash</string>
    <string name="initializing">Menginisialisasi kamera...</string>
    <string name="detection_status">Status Deteksi</string>
    <string name="confidence_score">Skor Kepercayaan</string>
    <string name="confidence_placeholder">Confidence: 0%</string>
    <string name="camera_error">Gagal mengakses kamera. Pastikan izin telah diberikan.</string>
    <string name="model_error">Gagal memuat model TensorFlow Lite</string>
    <string name="detecting">Mendeteksi...</string>
    <string name="detected">Terdeteksi</string>
    <string name="flash_on">Flash dinyalakan</string>
    <string name="flash_off">Flash dimatikan</string>
    <string name="splash_description">Memuat aplikasi</string>

    <!-- Login & Splash Strings -->
    <string name="login_screen">Layar Login</string>
    <string name="splash_screen">Layar Splash</string>
    <string name="login_subtitle">Deteksi nominasi uang kertas untuk tunanetra. Silahkan login menggunakan akun google anda</string>
    <string name="sign_in_with_google">Login dengan Google</string>
    <string name="ready_to_login">Siap untuk login</string>
    <string name="loading">Sedang memuat</string>
    <string name="status_message">Pesan Status</string>
    <string name="app_status">Status aplikasi, informasi deteksi uang</string>
    <string name="default_web_client_id">337004359665-16rpibcvk2dpuf8k13rb03954tu7pp34.apps.googleusercontent.com</string>
</resources>